# gst-playground

./: .clang-format  .gitignore  README.md  conanfile.txt  docker-compose.yml  meson.build
docker/: Dockerfile  Dockerfile.client  Dockerfile.rs  Dockerfile.signal
src/: appSink.cc  appSink.hh  basePlayer.cc  basePlayer.hh  baseRtcPlayer.cc  baseRtcPlayer.hh  element.cc  element.hh  flags.cc  flags.hh  gst-bus.hh  gstDeleter.hh  main.cc  pipeline.cc  pipeline.hh  playerFactory.cc  playerFactory.hh  thread.cc  thread.hh  webPlayer.cc  webPlayer.hh
tests/: appsink_test.cc  element_test.cc  element_test.hh  integration_test.cc  logger.cc  logger.hh  meson.build  pipeline_test.cc  test_utils.hh  testsrc.cc
